--- a/IntroNotebook_URFIST.ipynb
+++ b/IntroNotebook_URFIST.ipynb
@@ -61,7 +61,9 @@
         "id": "znJB4EnX_-8P"
       },
       "source": [
-        "## Utiliser le notebook"
+        "# Utiliser un notebook\n",
+        "\n",
+        "Un notebook n'est rien d'autre qu'une combinaison de texte et de code/output python. Attaché à un interpréteur, le notebook permet de garder ensemble des notes et des codes produisant des résultats. Il est composé de cellules. La cellule où j'écris ces lignes est une cellule markdown. Markdown est un langage multifonction qui permet d'écrire du texte, le mettre en forme, etc. Un petit guide de démarrage se trouve [ici](https://www.markdownguide.org/basic-syntax/). "
       ]
     },
     {
@@ -70,7 +72,7 @@
         "id": "LwBVGn2j_-8Q"
       },
       "source": [
-        "Un notebook n'est rien d'autre qu'une combinaison de texte et de code/output python. Attaché à un interpréteur, le notebook permet de garder ensemble des notes et des codes produisant des résultats. Il est composé de cellules. La cellule où j'écris ces lignes est une cellule markdown. Markdown est un langage multifonction qui permet d'écrire du texte, le mettre en forme, etc. Un petit guide de démarrage se trouve [ici](https://www.markdownguide.org/basic-syntax/). \n",
+        "\n",
         "\n",
         "Quand on exécute une cellule, dans le menu ici-haut ou bien on fait shift+Enter, la cellule va être lancée sur markdown pour nous donner le texte mis en forme. Google colab nous met aussi un apercu à côté de la cellule en mode édition. Cliquez deux fois sur la cellule pour voir le code. Par exemple voici une liste :\n",
         "* markdown est très utile\n",
@@ -98,7 +100,18 @@
       "source": [
         "# A vous\n",
         "\n",
-        "1. Créer ci-dessous une celulle de code. Affectez la valeur 4 à la variable var1 et la valeur \"chaine de caractère\" à la variable var2 à l'aide du signe '=' comme ceci :\n",
+        "Travail préliminaire à réaliser avant la formation\n"
+      ],
+      "metadata": {
+        "id": "ZAqQGhIbNbww"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "1. Copiez (menu fichier, enregistrer une copie dans drive) et renommez ce notebook avec votre nom ou pseudo\n",
+        "2. Créer ci-après une celulle de code. Affectez la valeur 4 à la variable var1 et la valeur \"chaine de caractère\" à la variable var2 à l'aide du signe '=' comme ceci :\n",
         "\n",
         "\n",
         "```\n",
@@ -109,15 +122,15 @@
         "> Notez que les lignes commençant par # sont des commentaires et non interprétées par python\n"
       ],
       "metadata": {
-        "id": "ZAqQGhIbNbww"
+        "id": "9-vmkudWbWWs"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "2. Partagez votre réalisation avec votre formateur à l'adresse : dreymond33@gmail.com\n",
+        "3. Partagez votre réalisation avec votre formateur à l'adresse : dreymond33@gmail.com\n",
         "\n",
-        "3. Exprimez vos attentes quant à cette formation"
+        "4. Exprimez vos attentes quant à cette formation en markdown"
       ],
       "metadata": {
         "id": "exAIlytkORff"
@@ -131,7 +144,7 @@
       "source": [
         "# Épilogue\n",
         "\n",
-        "Ce notebook sera complété afin d'introduire le langage et les commandes de bases. Mais ce ne sera pas une formation ni exhaustive au langage python ni à la programmation. Nous parcourons sous la même forme (notebook à compléter) des raccourcis ciblés sur l'utilisation de python et des notebooks pour le traitement de données textuelles (massives) essentiellement."
+        "Ce notebook sera complété afin d'introduire le langage et les commandes de bases. Mais ce ne sera pas une formation ni exhaustive au langage python ni à la programmation. Nous parcourons sous la même forme (notebook à compléter) des raccourcis ciblés sur l'utilisation de python et des notebooks pour le traitement de données textuelles (massives pour l'humain) essentiellement."
       ]
     }
   ],
