--- a/IntroNotebook_URFIST.ipynb
+++ b/IntroNotebook_URFIST.ipynb
@@ -2,6 +2,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "<p align=\"center\">\n",
+        "<img src=\"https://urfist.univ-cotedazur.fr/wp-content/uploads/2019/12/logo_urfist_mediterranee.png\" \n",
+        "alt=\"drawing\" width=\"350\"/>"
+      ],
+      "metadata": {
+        "id": "O2GfjSGmACwH"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "dlvlfbO4_-8N"
       },
